Making the suggested changes to the nav-links to correct their spacing

--- a/.themes/darkstripes/sass/base/_layout.scss
+++ b/.themes/darkstripes/sass/base/_layout.scss
@@ -92,8 +92,7 @@ body {
     list-style-type: none;
     float: right;
     margin-top: 1.1em;
-    width: 55%;
-    margin-right: 0.5em;
+    width: 45%;
     font-family: 'Average', serif;
     font-size: .99em;
   }
